--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,8 @@
-1) printstacktrace 제거
+﻿1) printstacktrace 제거
 2) 보안 위험성 제거
 3) 체크스타일 규칙 제거 -> 크게 필요성을 못 느끼겠음.
 
 4) cpd로 나온 결과도 모두 클린징 해줘야.
  -> priority #1
+
+.....
